# deeptest

./: .gitignore  README.md  TODO  bootstrap.sh  pyproject.toml  skel.sublime-project
src/: main.py
tests/: conftest.py  example1.rs  test_real.py
tests/example/: test_somestuff.py
