[project]
name = "gptest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.128.5",
    "loguru>=0.7.3",
    "openai>=2.17.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.128.5",
    "requests>=2.32.5",
]
